# fr_drv_ng_examples

./: README.md
classic_csharp/: BytesVector.cs  Program.cs  README.md  SWIGTYPE_p_f_r_q_const__std__string__void.cs  SWIGTYPE_p_std__functionT_void_fstd__string_const_RF_t.cs  classic_fr_drv_ng.cs  classic_fr_drv_ngPINVOKE.cs  classic_interface.cs
classic_fr_drv_ng_android_example/: README.md  settings.gradle
classic_fr_drv_ng_android_example/android_util_fr_drv_ng-release/: android_util_fr_drv_ng-release.aar  build.gradle
classic_fr_drv_ng_android_example/app/: build.gradle
classic_fr_drv_ng_android_example/app/src/main/: AndroidManifest.xml
classic_fr_drv_ng_android_example/app/src/main/res/layout/: activity_main.xml
classic_fr_drv_ng_android_example/app/src/main/res/values/: strings.xml
classic_fr_drv_ng_android_example/gradle/wrapper/: gradle-wrapper.properties
classic_go/: README.md
classic_go/app/: go.mod  program.go
classic_go/classic_fr_drv_ng/: classic_fr_drv_ng.go  go.mod
classic_interface/: CMakeLists.txt  c_main.cpp  main.cpp
classic_java/: README  README.md  build.gradle  settings.gradle
classic_java/gradle/wrapper/: gradle-wrapper.properties
classic_java/src/main/java/: example.java
classic_jsonrpc/: README.md  main.py
console_test/: README.md  dfu_update.sh  dfu_update_and_write_feature_licenses.bat  get_all_fs_docs.sh  write_feature_licenses.sh
console_test/lua/: README.md  classic_lua_example.lua
javapos/: build.gradle  settings.gradle
javapos/src/main/java/: example.java
(+6 files in other folders)
